News section finished

--- a/css/style.css
+++ b/css/style.css
@@ -70,7 +70,7 @@ h2 {
 }
 .learn-more:hover {
   color: black;
-  background-color: rgba(0, 0, 0, 0.048);
+  background-color: rgba(0, 0, 0, 0.04);
 }
 
 .black {
@@ -99,6 +99,31 @@ h2 {
   .element {
     display: none;
   }
+}
+
+.dot-container {
+  width: 120px;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.dot-container button {
+  height: 12px;
+  width: 12px;
+  border-radius: 50%;
+  border: none;
+  background-color: rgba(0, 0, 0, 0.2);
+  cursor: pointer;
+}
+.dot-container button:hover {
+  outline: 2px solid rgba(0, 0, 0, 0.2);
+}
+.dot-container #here {
+  background-color: black;
+}
+.dot-container #here:hover {
+  outline: none;
+  cursor: auto;
 }
 
 header {
@@ -328,7 +353,7 @@ header .header-container .header .menu {
   }
 }
 header .header-container .header .menu:hover {
-  background-color: rgba(0, 0, 0, 0.068);
+  background-color: rgba(0, 0, 0, 0.04);
 }
 header .header-container .header .menu i {
   font-size: 2.8rem;
@@ -788,6 +813,7 @@ header .header-container .header .menu i {
 }
 .services-section .services-container .learn-more {
   margin: 40px auto 0 auto;
+  width: 210px;
 }
 .services-section .services-container .services-grid {
   display: grid;
@@ -1068,38 +1094,16 @@ header .header-container .header .menu i {
 .team-section .team-section-container .team-grid .team-grid-container p {
   margin-top: 0;
 }
-.team-section .team-section-container .dot-container {
-  width: 120px;
-  margin: auto;
-  display: flex;
-  justify-content: space-between;
-}
-.team-section .team-section-container .dot-container button {
-  height: 12px;
-  width: 12px;
-  border-radius: 50%;
-  border: none;
-  background-color: rgba(0, 0, 0, 0.2);
-  cursor: pointer;
-}
-.team-section .team-section-container .dot-container button:hover {
-  outline: 2px solid rgba(0, 0, 0, 0.2);
-}
-.team-section .team-section-container .dot-container #here {
-  background-color: black;
-}
-.team-section .team-section-container .dot-container #here:hover {
-  outline: none;
-  cursor: auto;
-}
 
 .testimonial-section {
   background-color: #F0D082;
   padding: 0 40px;
+  padding-bottom: 70px;
 }
 @media (max-width: 768px) {
   .testimonial-section {
-    padding: 0 30px;
+    padding-right: 30px;
+    padding-left: 30px;
   }
 }
 .testimonial-section .testimonial-section-container {
@@ -1159,4 +1163,93 @@ header .header-container .header .menu i {
   width: 180px;
   margin: auto;
   margin-top: 20px;
+}
+
+.news-section .news-section-container {
+  max-width: 1380px;
+  padding: 60px 40px;
+  margin: auto;
+}
+.news-section .news-section-container .news-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: end;
+  margin-bottom: 40px;
+}
+@media (max-width: 768px) {
+  .news-section .news-section-container .news-header {
+    display: block;
+  }
+}
+.news-section .news-section-container .news-header .news-header-container h2 {
+  margin-bottom: 0;
+}
+.news-section .news-section-container .news-header .learn-more {
+  margin-left: 25px;
+  min-width: 180px;
+}
+@media (max-width: 768px) {
+  .news-section .news-section-container .news-header .learn-more {
+    margin: auto;
+    margin-top: 25px;
+  }
+}
+.news-section .news-section-container .news-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, 420px);
+  justify-content: space-evenly;
+  gap: 20px;
+}
+@media (max-width: 768px) {
+  .news-section .news-section-container .news-grid {
+    grid-template-columns: repeat(auto-fit, 340px);
+  }
+}
+.news-section .news-section-container .news-grid .news-grid-container {
+  text-decoration: none;
+  margin-bottom: 45px;
+  position: relative;
+}
+.news-section .news-section-container .news-grid .news-grid-container:hover {
+  background-color: rgba(0, 0, 0, 0.04);
+  outline: 5px solid rgba(0, 0, 0, 0.04);
+}
+.news-section .news-section-container .news-grid .news-grid-container .date {
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  background-color: #F9D783;
+  width: 56px;
+  height: 64px;
+  display: grid;
+  align-items: center;
+}
+.news-section .news-section-container .news-grid .news-grid-container .date h4 {
+  font-size: 22px;
+  font-weight: bold;
+  color: black;
+  text-align: center;
+  margin: 0 auto;
+}
+.news-section .news-section-container .news-grid .news-grid-container .date span {
+  font-size: 16px;
+  font-weight: 400;
+  display: block;
+  margin-top: -3px;
+}
+.news-section .news-section-container .news-grid .news-grid-container img {
+  margin-bottom: 18px;
+}
+@media (max-width: 768px) {
+  .news-section .news-section-container .news-grid .news-grid-container img {
+    width: 340px;
+  }
+}
+.news-section .news-section-container .news-grid .news-grid-container p {
+  margin: 0 10px 10px 10px;
+}
+.news-section .news-section-container .news-grid .news-grid-container h4 {
+  width: 60%;
+  margin: 13px 10px 10px 10px;
+  color: black;
 }
