--- a/contact/css/style.scss
+++ b/contact/css/style.scss
@@ -198,8 +198,11 @@ header{
         
                     .social{
                         a{
-                            margin-right: 0.3vw;
+                            margin-right: 10px;
+
                             i{
+                                margin: 0;
+
                                 font-size: 16px;
             
                                 &:hover{
