--- a/css/style.scss
+++ b/css/style.scss
@@ -283,8 +283,11 @@ header{
         
                     .social{
                         a{
-                            margin-right: 0.3vw;
+                            margin-right: 10px;
+
                             i{
+                                margin: 0;
+
                                 font-size: 16px;
             
                                 &:hover{
@@ -512,11 +515,12 @@ main{
                     }
     
                     @media (max-width: 768px){
+                        padding: 0 20px;
+
                         font-size: 3rem;
+                        text-align: center;
     
                         margin: 10px;
-    
-                        text-align: center;
                     }
                 }
     
@@ -542,6 +546,8 @@ main{
                     }
     
                     @media (max-width: 768px){
+                        padding: 0 20px;
+                        
                         text-align: center;
     
                         margin-right: 15px;
